--- a/web_app/static/css/custom.css
+++ b/web_app/static/css/custom.css
@@ -9,18 +9,25 @@ main {
 
 
 .attack-1 {
-    animation: animate-attack-1 2s linear;
+    animation: animate-attack-1 2s;
 }
 
 @keyframes animate-attack-1 {
     0% {
         transform: translate3d(0,0,0);
     }
-
-    
     
     50% {
-        transform: translate3d(75%,0,0) rotate(30deg)
+        transform: translate3d(30vw,0,0) rotate(30deg)
+    }
+    
+    
+    57% {
+        transform: translate3d(42vw,0,0) rotate(30deg)
+    }
+
+    65% {
+        transform: translate3d(30vw,0,0) rotate(30deg)
     }
 
     
@@ -31,7 +38,7 @@ main {
 }
 
 .attack-2 {
-    animation: animate-attack-2 2s linear;
+    animation: animate-attack-2 2s;
 }
 
 @keyframes animate-attack-2 {
@@ -39,13 +46,19 @@ main {
         transform: translate3d(0,0,0);
     }
 
-    
-    
     50% {
-        transform: translate3d(-75%,0,0) rotate (-30deg);
+        transform: translate3d(-30vw,0,0) rotate(-30deg)
+    }
+    
+    
+    57% {
+        transform: translate3d(-42vw,0,0) rotate(-30deg)
     }
 
-    
+    65% {
+        transform: translate3d(-30vw,0,0) rotate(-30deg)
+    }
+
     
     100% {
         transform: translate3d(0,0,0) rotate(0deg);
