--- a/web_app/blueprints/games/templates/games/show.html
+++ b/web_app/blueprints/games/templates/games/show.html
@@ -117,7 +117,7 @@ Your proDUCKtive war
             {% if to_approve_length > 0 %}
             <a href="{{ url_for('log_habits.show_approve', username = username, game_id = game_id ) }}"><button>You have
                     pending
-                    approvals!</button></a>
+                    approvals!</button class='btn btn-info'></a>
             {% endif %}
         </div>
         <div id="container" class="d-flex justify-content-between">
