--- a/web_app/templates/_layout.html
+++ b/web_app/templates/_layout.html
@@ -1,92 +1,98 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon.ico') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon.ico') }}">
 
-    {% assets "home_css" %}
-      <link rel="stylesheet" href="{{ ASSET_URL }}">
-    {% endassets %}
+  {% assets "home_css" %}
+  <link rel="stylesheet" href="{{ ASSET_URL }}">
+  {% endassets %}
 
-    {% assets "home_js" %}
-      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-    {% endassets %}
-    
+  {% assets "home_js" %}
+  <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+  {% endassets %}
 
-    {% block header %}{% endblock %}
-    <title>{% block title %}Productivity Wars{% endblock %}</title>
-  </head>
 
-    <body>
+  {% block header %}{% endblock %}
+  <title>{% block title %}Productivity Wars{% endblock %}</title>
+</head>
 
-        <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #4a6271">
-            <a class="navbar-brand" href="/">
-              <img src="/static/images/duck-images/duck-placeholder.png" width="30" height="30" alt="">
-              Habit Wars
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <div class="collapse navbar-collapse" id ='navbarSupportedContent'>
-              <ul class="navbar-nav ml-auto">
-                  <form action="#" class="form-inline my-2 my-lg-0">
-                      <input id='nav-search' class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                  {% if current_user.is_active %}
-                    <li class="nav-item">
-                      <a href={{ url_for('games.index', username=current_user.username)}} class="nav-link">
-                        Games
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a href={{ url_for('users.show', username=current_user.username)}} class="nav-link">
-                        Profile
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href={{ url_for('sessions.destroy')}} class="nav-link">
-                          Sign Out
-                        </a>
-                    </li>
-                  
-                  {% else %}
-                    <li class="nav-item">
-                      <a href="/users/new" class="nav-link">
-                        Register
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a href='/sessions/new' class="nav-link">
-                        Sign In
-                      </a>
-                    </li>
-                {% endif %}
-                
-              </ul>
-            </div>
-    
-        </nav>
+<body>
 
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          {% for message in messages %}
-            {{ message }}
-          {% endfor %}
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #4a6271">
+    <a class="navbar-brand" href="/">
+      <img src="/static/images/duck-images/duck-placeholder.png" width="30" height="30" alt="">
+      Habit Wars
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id='navbarSupportedContent'>
+      <ul class="navbar-nav ml-auto">
+        <form action="#" class="form-inline my-2 my-lg-0">
+          <input id='nav-search' class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        {% if current_user.is_active %}
+        <li class="nav-item">
+          <a href={{ url_for('games.index', username=current_user.username)}} class="nav-link">
+            Games
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href={{ url_for('users.show', username=current_user.username)}} class="nav-link">
+            Profile
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href={{ url_for('sessions.destroy')}} class="nav-link">
+            Sign Out
+          </a>
+        </li>
+
+        {% else %}
+        <li class="nav-item">
+          <a href="/users/new" class="nav-link">
+            Register
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href='/sessions/new' class="nav-link">
+            Sign In
+          </a>
+        </li>
         {% endif %}
-      {% endwith %}
+
+      </ul>
+    </div>
+
+  </nav>
+
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+      {% for category, message in messages %}
+          <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+              <span>{{ message }}</span>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+      {% endfor %}
+  {% endif %}
+{% endwith %}
 
 
-      {% block content %}
-
-      
-      {% endblock %}
+  {% block content %}
 
 
-    </body>
+  {% endblock %}
+
+
+</body>
 
 </html>
