styled show game page

--- a/web_app/blueprints/games/templates/games/show.html
+++ b/web_app/blueprints/games/templates/games/show.html
@@ -107,8 +107,9 @@ Your proDUCKtive war
         {% else %}
 
         <!-- Page state when game is accepted -->
-        <div class="d-flex justify-content-between" id="header-div">
+        <div class="d-flex flex-column justify-content-between" id="header-div">
             <h1 id="produck-title">Your proDUCKtivity war</h1>
+            <h3 style="color: white;">Week of: {{current_round_object.created_at.date()}}</h3>
 
 
             <!-- Player 1 Habits -->
@@ -123,13 +124,13 @@ Your proDUCKtive war
         <div id="container" class="d-flex justify-content-between">
             <div class="col-5" id="p1-habits">
                 <img class="w-100 rounded-circle mb-3" src="/static/img/game-duck-2.jpg">
-                <h3>Your habits</h3>
+                <h3 style="color: white;">Your habits</h3>
                 {% for i in range(0, length_habit_list)|reverse %}
                 <div class="habit my-1">
                     {% if user_more_to_go[i] < 1 %}
                     <p> Congratulations! You don't have to {{user_habits[i].name.lower()}} again this week.</p>
                     {% else %}
-                    <p class="my-4">{{user_habits[i].name}}! {{user_more_to_go[i]}} more to go!</p>
+                    <p class="my-2">{{user_habits[i].name}}! {{user_more_to_go[i]}} more to go!</p>
                     {% endif %}
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="{{rounded_progress[i]}}"
@@ -138,11 +139,12 @@ Your proDUCKtive war
                     </div>
                     {% if user_more_to_go[i] > 0 %}
                     <form action={{ url_for('log_habits.create')}} method="POST" enctype="multipart/form-data">
-                        <input name='image-for-{{user_habits[i].id}}' type="file" accept="image/*" capture="camera"
-                            value="Add photo">
+                        <input name='image-for-{{user_habits[i].id}}' id="input-file-{{user_habits[i].id}}" type="file"
+                            accept="image/*" capture="camera" value="Add photo" class='image-upload-input btn btn-outline-light'>
                         <input name='habit-id' type='hidden' value={{user_habits[i].id}}>
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                        <input type="submit" value="Habit done">
+                        <button type="submit" class='btn btn-info' id="submit-habit-{{user_habits[i].id}}">Log</button>
+
                     </form>
                     {% endif %}
 
@@ -156,7 +158,7 @@ Your proDUCKtive war
 
             <div class="col-5" id="p1-habits">
                 <img class="w-100 rounded-circle mb-3" src="/static/img/game-duck-1.jpg">
-                <h3>{{opponent_username}}'s habits</h3>
+                <h3 style="color: white;">{{opponent_username}}'s habits</h3>
                 {% for i in range(0, opponent_habit_length)|reverse %}
                 <div class="habit">
                     <p class="mt-4">{{opponent_habits[i].name}}</p>
@@ -180,6 +182,16 @@ Your proDUCKtive war
 
 
     <style>
+        .image-upload-input {
+            
+            width: 85%;
+        }
+
+
+        div p {
+            color: white;
+        }
+
         #produck-title {
             color: white;
         }
