--- a/web_app/blueprints/games/templates/games/index.html
+++ b/web_app/blueprints/games/templates/games/index.html
@@ -32,7 +32,7 @@ Active Games
             <form action={{ url_for('games.show', username=username, game_id=game.id)}} method="GET">
                 <input type='submit' class='btn btn-info' value="View Game">
             </form>
-            <form action={{ url_for('rounds.index', game_id=game.id)}} style="margin-right: 8px;" method="GET">
+            <form action={{ url_for('rounds.index', game_id=game.id, user_id=current_user.id)}} style="margin-right: 8px;" method="GET">
                 <input type='submit' class='btn btn-info' value="Battle History">
             </form>
         </div>
