--- a/web_app/blueprints/games/templates/games/new.html
+++ b/web_app/blueprints/games/templates/games/new.html
@@ -6,75 +6,89 @@
 
     <div class="row" style="height: 100vh">
         <div style="color: white" class="col-12 col-md-6">
-            <h1> Pick up to three habits and challenge a friend to a ProDUCKtivity War!</h1>
+            <h1> Pick up to three habits and challenge a friend to a Habit War!</h1>
         </div>
 
-        <div class="col-12 col-md-6 row justify-content-center">
-            <form action="{{ url_for('games.create') }}" method="POST">
+        <div class="col-12 col-md-6 row pl-5 justify-content-center">
+            <form id='accept-form' action={{ url_for("games.create", username=username, game_id=game_id)}}
+                method="POST">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                
+                <div class="form-row">
+                        <h4 style="color: white;"> Enter your opponent's user name:</h4>
+                            <input class="form-control" type='text' name="p2_name" placeholder="Opponent's username">
+                        </div>
+                        <hr>
 
-                <div class="input-group">
-                    <input type="text" name="p2_name" placeholder="Opponent username"
-                        class="form-control col-md-8 ">
-                </div>
-                <br>
+                        <!-- <label class='ml-auto'> Select Frequency</label> -->
+                        <div class="form-row">
+                            <div class="form-group col-7">
+                                <label for="habit_1_name">Habit 1</label>
+                                <input form="accept-form" id="habit_1_name" name='habit_1_name' class="form-control" type='text'>
+                            </div>
+                            <div class="form-group col-5">
+                                <label for="habit_1_value">Weekly Goal</label>
+                                <select form='accept-form' id="habit_1_value" name="habit_1_value"
+                                    class="custom-select">
+                                    <option value='0' selected disabled>Choose...</option>
+                                    <option value='1'>1</option>
+                                    <option value='2'>2</option>
+                                    <option value='3'>3</option>
+                                    <option value='4'>4</option>
+                                    <option value='5'>5</option>
+                                    <option value='6'>6</option>
+                                    <option value='7'>7</option>
+                                </select>
+                            </div>
+                        </div>
 
-                <div class="input-group">
-                    <input type="text" name="habit_1_name" placeholder="Habit 1" class="form-control col-md-8 ">
+                        <div class="form-row">
+                            <div class="form-group col-7">
+                                <label for="habit_2_name">Habit 2</label>
+                                <input form="accept-form" id="habit_2_name" name='habit_2_name' class="form-control" type='text'>
+                            </div>
+                            <div class="form-group col-5">
+                                <label for="habit_2_value">Weekly Goal</label>
+                                <select form='accept-form' id="habit_2_value" name="habit_2_value"
+                                    class="custom-select">
+                                    <option value='0' selected disabled>Choose...</option>
+                                    <option value='1'>1</option>
+                                    <option value='2'>2</option>
+                                    <option value='3'>3</option>
+                                    <option value='4'>4</option>
+                                    <option value='5'>5</option>
+                                    <option value='6'>6</option>
+                                    <option value='7'>7</option>
+                                </select>
+                            </div>
+                        </div>
 
-                    <div class="form-group col-md-5">
-                        <select id="inputState" name="habit_1_value" class="form-control">
-                            <option value="0" selected disabled>Choose...</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                        </select>
+                        <div class="form-row">
+                            <div class="form-group col-7">
+                                <label for="habit_3_name">Habit 3</label>
+                                <input form="accept-form" id="habit_3_name" name='habit_3_name' class="form-control" type='text'>
+                            </div>
+                            <div class="form-group col-5">
+                                <label for="habit_3_value">Weekly Goal</label>
+                                <select form='accept-form' id="habit_3_value" name="habit_3_value"
+                                    class="custom-select">
+                                    <option value='0' selected disabled>Choose...</option>
+                                    <option value='1'>1</option>
+                                    <option value='2'>2</option>
+                                    <option value='3'>3</option>
+                                    <option value='4'>4</option>
+                                    <option value='5'>5</option>
+                                    <option value='6'>6</option>
+                                    <option value='7'>7</option>
+                                </select>
+                            </div>
+                        </div>
+                    
+                    <div class="d-flex flex-row-reverse">
+                        <input form='accept-form' name='challenge-response' value='Accept' type='submit'
+                            class='btn btn-info'>
                     </div>
-
-                </div>
-
-                <div class="input-group">
-                    <input type="text" name="habit_2_name" placeholder="Habit 2" class="form-control col-md-8 ">
-
-                    <div class="form-group col-md-5">
-                        <select id="inputState" name="habit_2_value" class="form-control">
-                            <option value='0' selected disabled>Choose...</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                        </select>
-                    </div>
-
-                </div>
-
-                <div class="input-group">
-                    <input type="text" name="habit_3_name" placeholder="Habit 3" class="form-control col-md-8 ">
-
-                    <div class="form-group col-md-5">
-                        <select id="inputState" name="habit_3_value" class="form-control">
-                            <option value='0' selected disabled>Choose...</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                        </select>
-                    </div>
-
-                </div>
-
-                <button type="submit" class="btn btn-info">Submit</button>
-
+                
             </form>
 
         </div>
@@ -82,5 +96,10 @@
     </div>
 </div>
 
+<style>
+    #accept-form label {
+        color: white;
+    }
+</style>
 
 {% endblock %}
